groups/flowDefinitions/objects/TW1_Prpriedade_Oportunidade__c.object
<CustomObject>
    <description>Objeto de junção entre oportunidade e propriedade.</description>
    <fields>
        <fullName>TW1_Oportunidade__c</fullName>
        <label>Oportunidade</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Propriedades da Oportunidade</relationshipLabel>
        <relationshipName>Propriedades_da_Oportunidade</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_Propriedade__c</fullName>
        <label>Propriedade</label>
        <referenceTo>TW1_Propriedade__c</referenceTo>
        <relationshipLabel>Propriedades da Oportunidade</relationshipLabel>
        <relationshipName>Propriedades_da_Oportunidade</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TW1_tipo_de_propriedade__c</fullName>
        <formula>TW1_Propriedade__r.RecordType.Name</formula>
        <label>Tipo de propriedade</label>
        <type>Text</type>
    </fields>
    <label>Propriedade da Oportunidade</label>
    <nameField>
        <displayFormat>{YYYY}{MM}-{0}</displayFormat>
        <label>Identificador</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Propriedades da Oportunidade</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>